syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

message HubEventProto{
  string hub_id = 1; // Идентификатор хаба.
  google.protobuf.Timestamp timestamp = 2; // Таймстемп события.
  /*
  Сдержимое конкретного события.
   */
  oneof payload {
    DeviceAddedEventProto device_added = 3;      // Данные события добавления устройства.
    DeviceRemovedEventProto device_removed = 4;  // Данные события удаления устройства.
    ScenarioAddedEventProto scenario_added = 5;      // Данные события добавления нового сценария.
    ScenarioRemovedEventProto scenario_removed = 6;  // Данные события удаления сценария.
  }
}

/*
События (де)регистрации устройств.
 */
enum DeviceTypeProto{
  // Варианты значений enum DeviceTypeProto
  MOTION_SENSOR = 0;      // Датчик движения.
  TEMPERATURE_SENSOR = 1; // Датчик температуры.
  LIGHT_SENSOR = 2;       // Датчик освещённости.
  CLIMATE_SENSOR = 3;     // Датчик контроля климата.
  SWITCH_SENSOR = 4;      // Переключатель.
}

message DeviceAddedEventProto {
  string id = 1;        // Идентификатор устройства.
  DeviceTypeProto type = 2; // Тип устройства.
}

message DeviceRemovedEventProto {
  string id = 1;        // Идентификатор устройства.
}

/*
События создания/удаления сценариев.
*/
enum ConditionTypeProto {
  MOTION = 0;
  LUMINOSITY = 1;
  SWITCH = 2;
  TEMPERATURE = 3;
  CO2LEVEL = 4;
  HUMIDITY = 5;
}

enum ConditionOperationProto {
  EQUALS = 0;
  GREATER_THAN = 1;
  LOWER_THAN = 2;
}

message ScenarioConditionProto {
  string sensor_id = 1;
  ConditionTypeProto type = 2;
  ConditionOperationProto operation = 3;
  oneof value {
    bool bool_value = 4;
    int32 int_value = 5;
  }
}

enum ActionTypeProto {
  ACTIVATE = 0;
  DEACTIVATE = 1;
  INVERSE = 2;
  SET_VALUE = 3;
}

message DeviceActionProto {
  string sensor_id = 1; // Идентификатор устройства.
  ActionTypeProto type = 2;
  optional int32 value = 3;
}

message ScenarioAddedEventProto {
  string name = 1; // Название сценария уникальное в рамках хаба.
  repeated ScenarioConditionProto condition = 2; // Набор условий активации сценария.
  repeated DeviceActionProto action = 3; // Набор действий при активации сценария.
}

message ScenarioRemovedEventProto {
  string name = 1; // Название сценария уникальное в рамках хаба.
}

message DeviceActionRequest {
  string hub_id = 1; // Идентификатор хаба.
  string scenario_name = 2; // Название сценария уникальное в рамках хаба.
  DeviceActionProto action = 3;
  google.protobuf.Timestamp timestamp = 4;
}